* New feature: editor 'highlight in outline browser' context menu item
* Bug fix: exception in some cases when 'highlight in FS browser' is selected
* New feature: user selectable behavior - to preserve or not the tab order upon
  selection a tab in the tab list button menu
* Bug fix: on some systems find/replace comboboxes expanded too much in case of
  long patterns

2013 Dec 14 Sergey Satskiy <sergey.satskiy@gmail.com>

* Version 2.2.1
* Improvement: debugger variable view displays the number of lines and the number
  of characters for python strings and QStrings. Unnecessary '.' in the QString
  variable name is stripped.
* Bug fix: proper signalling VCS status change in the project browser
* Rectangular selection: Ctrl+mouse or Alt+Shift+cursor keys
* Better help widget
* Better welcome widget
* pylint 1.0.0 is now working
* Fix: Ctrl++, Ctrl+- on numpad did not change the font size on all tabs.
* Fix for FC19: diff viewer font was not monospaced
* Improvement: diff viewer font is scaled in sync with the main editor
* Bug fix: VCS annotate in debug mode caused crash
* Bug fix: newly opened files withing a debug session are editable
* Removing zoom buttons from the text editor toolbar
* Bug fix: SVN plugin delete warning dialog failed
* Bug fix: do not show calltip for calls in string literals
* Bug fix: in case if many files were modified outside one of the outside
  modification notice dialogs did not show 'reload all' choice

2013 Nov 16 Sergey Satskiy <sergey.satskiy@gmail.com>

* Version 2.2.0
* Improvement: scaling of diagram and pictures is now via Ctrl + Mouse wheel
* Improvement: scaling text editor fonts via Ctrl + Mouse wheel
* Project tab is activated automatically when a project is loaded from the
  recent projects tab
* Reset pyflakes labels when a file changed its type due to 'save as' action
* New feature: SVN plugin
* Do not show improper calltips provided by the rope library
* Bug fix: find in files crash if the found line is the last one